samples/_failures_safe/1761722969_d8a74d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e209dbdc.c: In function ‘write_data’:
./samples/SAFE/__tmp_e209dbdc.c:144:10: error: ‘size’ undeclared (first use in this function); did you mean ‘size_t’?
  144 |     for (size
      |          ^~~~
      |          size_t
./samples/SAFE/__tmp_e209dbdc.c:144:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_e209dbdc.c:144:14: error: expected ‘;’ at end of input
  144 |     for (size
      |              ^
      |              ;
./samples/SAFE/__tmp_e209dbdc.c:144:5: error: expected declaration or statement at end of input
  144 |     for (size
      |     ^~~
